page name replaced small 1

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width" />
-      <title>Responsive One Page website template</title>
+      <title>Ninad Nerkar</title>
       <link rel="stylesheet" href="css/components.css">
       <link rel="stylesheet" href="css/responsee.css">
       <link rel="stylesheet" href="owl-carousel/owl.carousel.css">
@@ -28,17 +28,17 @@
          <nav>
             <div class="line">
                <div class="s-12 l-2">
-                  <p class="logo"><strong>One</strong>page</p>
+                  <p class="logo"><strong>ninad</strong>nerkar</p>
                </div>
                <div class="top-nav s-12 l-10">
                   <p class="nav-text">Custom menu text</p>
                   <ul class="right">
                      <li class="active-item"><a href="#carousel">Home</a></li>
-                     <li><a href="#features">Features</a></li>
-                     <li><a href="#about-us">About Us</a></li>
-                     <li><a href="#our-work">Our Work</a></li>
-                     <li><a href="#services">Services</a></li>
-                     <li><a href="#contact">Contact</a></li>
+                     <li><a href="#about-us">about me</a></li>
+		     <li><a href="#our-work">my work</a></li>
+                     <li><a href="#services">services</a></li>
+                     <li><a href="#features">hobbies</a></li>
+                     <li><a href="#contact">contact</a></li>
                   </ul>
                </div>
             </div>
@@ -60,7 +60,7 @@
                              <i class="icon-chevron_right"></i>
                           </div>
                         </div> 
-                        <h2>Free Onepage Responsive Template</h2>
+                        <h2>ninad nerkar</h2>
                         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna.</p>
                      </div>
                   </div>
