--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Fashion is our passion | Free responsive Fashion Blog template</title>
+      <title>food | travel | lifestyle</title>
       <meta name="description" content="Download free amazing responsive Fashion Blog template."/>
       <meta name="keywords" content="free, responsive, blog, fashion, web site, template"/>
       <link rel="stylesheet" href="css/components.css">
@@ -23,7 +23,7 @@
                <div class="top-nav">
                   <p class="nav-text"></p>
                   <a class="logo" href="index.html">            
-                  Fashion<span>Blog</span>
+                  ninad<span>nerkar</span>
                   </a>                                    
                   <ul class="top-ul right">
                      <li>            
@@ -39,10 +39,10 @@
                         <a href="contact.html">Contact</a>            
                      </li>
                      <div class="social right">	           
-                        <a target="_blank" href="https://www.facebook.com/myresponsee">
+                        <a target="_blank" href="https://www.facebook.com/npicksdbest">
                         <i class="icon-facebook_circle icon2x"></i>
                         </a>          
-                        <a target="_blank" href="https://twitter.com/MyResponsee">
+                        <a target="_blank" href="https://twitter.com/ninad_nerkar">
                         <i class="icon-twitter_circle icon2x"></i>
                         </a>          
                      </div>
@@ -67,7 +67,7 @@
                   <!-- text -->                 
                   <div class="s-12 l-5 post-text">
                      <a href="post-1.html">
-                        <h2>Free responsive template</h2>
+                        <h2>Welcome to My Blog Page</h2>
                      </a>
                      <p>Lorem ipsum dolor sit amet, conse ctetuer. Duis autem vemeu iriure dolor adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat wisi enim.             
                      </p>
