--- a/index.html
+++ b/index.html
@@ -61,21 +61,21 @@
                   <!-- image -->                 
                   <div class="s-12 l-6 post-image">                   
                      <a href="post-1.html">
-                     <img class="full-img" src="img/post1.jpg" alt="Fashion 1">
+                     <img class="full-img" src="img/pizzasmall.jpg" alt="Fashion 1">
                      </a>                
                   </div>
                   <!-- text -->                 
                   <div class="s-12 l-5 post-text">
                      <a href="post-1.html">
-                        <h2>Welcome to My Blog Page</h2>
+                        <h2>After a long time ! PIZZA !!</h2>
                      </a>
-                     <p>Lorem ipsum dolor sit amet, conse ctetuer. Duis autem vemeu iriure dolor adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat wisi enim.             
+                     <p>It has been long since I've last been to Mumbai. This was the time to catchup with some good old friends!
                      </p>
                   </div>
                   <!-- date -->                 
                   <div class="s-12 l-1 post-date">
-                     <p class="date">07</p>
-                     <p class="month">mar</p>
+                     <p class="date">19</p>
+                     <p class="month">feb</p>
                   </div>
                </article>
                
@@ -202,13 +202,13 @@
          <footer>
             <div class="s-12 l-8">
                <p>
-                  Copyright 2016, Vision Design - graphic zoo<br>
-                  All images have been purchased from Bigstock. Do not use the images in your website.
+                  Copyright 2016, ninad nerkar<br>
+                  All images are taken by me unless mentioned.
                </p>
             </div>
             <div class="s-12 l-4">		                            
-               <a class="right" href="http://www.myresponsee.com" title="Responsive framework">Design and coding<br>
-               by Responsee Team
+               <a class="right" href="http://www.ninadnerkar.github.io" title="food | travel | lifestyle">Content<br>
+               by ninad nerkar
                </a>                       
             </div>
          </footer>
