--- a/post-1.html
+++ b/post-1.html
@@ -3,9 +3,9 @@
    <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Fashion is our passion | And again - it's totally free!</title>
-      <meta name="description" content="Download free amazing responsive Fashion Blog template."/>
-      <meta name="keywords" content="free, responsive, blog, fashion"/>
+      <title>Food is our passion!</title>
+      <meta name="description" content="Read My blogs."/>
+      <meta name="keywords" content="food, friends, pizza"/>
       <link rel="stylesheet" href="css/components.css">
       <link rel="stylesheet" href="css/icons.css">
       <link rel="stylesheet" href="css/responsee.css">
@@ -61,7 +61,7 @@
                   <div class="post-1 line">
                      <!-- image -->                 
                      <div class="s-12 l-11 post-image">                   
-                        <img src="img/post1-big.jpg" alt="Fashion">              
+                        <img src="img/pizzabig.jpg" alt="Fashion">              
                      </div>
                      <!-- date -->                 
                      <div class="s-12 l-1 post-date">
