--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
-<iframe src="https://onedrive.live.com/edit.aspx?resid=528A30704CA77DF8!1678&app=Excel&wdnd=1&wdPreviousSession=02c3656f-5edb-4ead-82fd-198debc85e78&wdNewAndOpenCt=1502879590826&wdPreviousCorrelation=79916b5a-76b4-43f0-8b01-73fd565e1a26#" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
-
+<table>
+<tr><td><div contenteditable>I'm editable</div></td><td><div contenteditable>I'm also editable</div></td></tr>
+<tr><td>I'm not editable</td></tr>
+</table>
 </html>
