--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <body>
 
 <h1>VIP Unloading</h1>
-<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRs4J4TBrZ9NlNYNocRfjQfl-rBewkNh8aghWHhOn4tTnWmVDuwNsF6NsbX9tm75iqhHRS2n5yQsowI/pubhtml?gid=917606053&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRs4J4TBrZ9NlNYNocRfjQfl-rBewkNh8aghWHhOn4tTnWmVDuwNsF6NsbX9tm75iqhHRS2n5yQsowI/pubhtml?gid=917606053&amp;single=true&amp;widget=true&amp;headers=false"
+        frameborder="0" width="960" height="569"
+        ></iframe>
 </body>
 </html>
