--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container embed-responsive embed-responsive-4by3'>
-     <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSrl2sPlk-BrBgp9S7SaVDW9FIPu8xHc_2Vw3Jug6miECbllfPx87x1okLqe0J5SVoU0c4jal7UFxD7/embed?start=true&loop=true&delayms=3000"                           
+     <iframe src="https://docs.zoho.com/sheet/published.do?rid=5eh3o5677d3081b064018befc6700ac6628cb&mode=embed"                           
                                     style="overflow: hidden; height: 75%; 
                                                 width: 75%; float: left; " height="75%" width="75%"
                                    align="left">
