--- a/index.html
+++ b/index.html
@@ -5,12 +5,6 @@
   <title>Split</title>
 </head>
 <body>
-<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container embed-responsive embed-responsive-4by3'>
-     <iframe src="https://docs.zoho.com/sheet/published.do?rid=5eh3o5677d3081b064018befc6700ac6628cb&mode=embed"                           
-                                    style="overflow: hidden; height: 75%; 
-                                                width: 75%; float: left; " height="75%" width="75%"
-                                   align="left">
-                                  </iframe>  
-
-</body>
+<iframe src='https://docs.zoho.com/sheet/publishrange.do?id=3159f53bd435ff955445a239f06315aa' frameborder='0' style='height:18px;width:83px' marginwidth='0' marginheight='0' scrolling='auto'> </iframe>
+  </body>
 </html>
