--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
   <title>Split</title>
 </head>
 <body>
-<iframe src='https://docs.zoho.com/sheet/publishrange.do?id=3159f53bd435ff955445a239f06315aa' frameborder='0' style='height:18px;width:83px' marginwidth='0' marginheight='0' scrolling='auto'> </iframe>
-  </body>
+
+     <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSrl2sPlk-BrBgp9S7SaVDW9FIPu8xHc_2Vw3Jug6miECbllfPx87x1okLqe0J5SVoU0c4jal7UFxD7/embed?start=true&loop=true&delayms=3000" frameborder="0" scrolling="yes"                           
+                                    style="overflow: hidden; height: 75%; 
+                                                width: 49%; float: left; " height="75%" width="49%"
+                                   align="left">
+                                  </iframe>  
+
+     <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRs4J4TBrZ9NlNYNocRfjQfl-rBewkNh8aghWHhOn4tTnWmVDuwNsF6NsbX9tm75iqhHRS2n5yQsowI/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false" frameborder="0" scrolling="yes"  
+                                        style="overflow: hidden; height: 75%;
+                                        position: absolute;
+                                        width: 49%; " height="75%" width="49%"                                 
+                                         align="right">
+                                        </iframe>
+  
+  <iframe width="905" height="190" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRs4J4TBrZ9NlNYNocRfjQfl-rBewkNh8aghWHhOn4tTnWmVDuwNsF6NsbX9tm75iqhHRS2n5yQsowI/pubchart?oid=1982250927&amp;format=interactive"></iframe>
+</body>
 </html>
