--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
                                         width: 49%; " height="75%" width="49%"                                 
                                          align="right">
                                         </iframe>
-  
+  <div id="Progress Bar">
+   <iframe name="Progress Bar" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRs4J4TBrZ9NlNYNocRfjQfl-rBewkNh8aghWHhOn4tTnWmVDuwNsF6NsbX9tm75iqhHRS2n5yQsowI/pubchart?oid=1982250927&format=interactive" style="height:25%; width: 100%; border: none;"></iframe>
+</div>
 </body>
 </html>
