--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 
      <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSrl2sPlk-BrBgp9S7SaVDW9FIPu8xHc_2Vw3Jug6miECbllfPx87x1okLqe0J5SVoU0c4jal7UFxD7/embed?start=true&loop=true&delayms=3000" frameborder="0" scrolling="yes"                           
                                     style="overflow: hidden; height: 100%; 
-                                                width: 49%; float: left; " height="100%" width="49%"
-                                   align="left">
+                                                width: 49%; float: right; " height="100%" width="49%"
+                                   align="right">
                                   </iframe>  
 
      <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRs4J4TBrZ9NlNYNocRfjQfl-rBewkNh8aghWHhOn4tTnWmVDuwNsF6NsbX9tm75iqhHRS2n5yQsowI/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false" frameborder="0" scrolling="yes"  
                                         style="overflow: hidden; height: 75%;
                                         position: absolute;
                                         width: 49%; " height="75%" width="49%"                                 
-                                         align="right">
+                                         align="left">
                                         </iframe>
   <div id="Progress Bar">
    <iframe name="Progress Bar" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRs4J4TBrZ9NlNYNocRfjQfl-rBewkNh8aghWHhOn4tTnWmVDuwNsF6NsbX9tm75iqhHRS2n5yQsowI/pubchart?oid=1982250927&format=interactive" style="height:25%; width: 100%; border: none;"></iframe>
