--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body>
 <div id="cs">
      <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSrl2sPlk-BrBgp9S7SaVDW9FIPu8xHc_2Vw3Jug6miECbllfPx87x1okLqe0J5SVoU0c4jal7UFxD7/embed?start=true&loop=true&delayms=3000" frameborder="0" scrolling="yes"                           
-                                    style="overflow: hidden; height: 100%; 
-                                                width: 49%; float: right; " height="100%" width="49%"
+                                    style="overflow: hidden; height: 600px; 
+                                                width: 49%; float: right; " height="600px" width="49%"
                                    align="right">
                                   </iframe>  
 
@@ -22,7 +22,7 @@
   <div id="pb">
    <iframe name="pb" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRs4J4TBrZ9NlNYNocRfjQfl-rBewkNh8aghWHhOn4tTnWmVDuwNsF6NsbX9tm75iqhHRS2n5yQsowI/pubchart?oid=1982250927&format=interactive" style="height:25%; width: 100%; border: none;"></iframe>
 </div>
-  html,body {
+  {
     height:100%;
 }
 .h_cs iframe {
