--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <div id="cs">
      <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSrl2sPlk-BrBgp9S7SaVDW9FIPu8xHc_2Vw3Jug6miECbllfPx87x1okLqe0J5SVoU0c4jal7UFxD7/embed?start=true&loop=true&delayms=3000" frameborder="0" scrolling="yes"                           
                                     style="overflow: hidden; height: 600px; 
-                                                width: 600%; float: right; " height="600px" width="600%"
+                                                width: 500px; float: right; " height="600px" width="500px"
                                    align="right">
                                   </iframe>  
 
