--- a/index.html
+++ b/index.html
@@ -9,24 +9,25 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-
-<nav class="navbar navbar-default">
+padding-top: 70px;
+<nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">WebSiteName</a>
+      <a class="navbar-brand" href="#">Stellar - VIP Uran WH</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Home</a></li>
-      <li><a href="#">Page 1</a></li>
-      <li><a href="#">Page 2</a></li>
-      <li><a href="#">Page 3</a></li>
+      <li class="active"><a href="#">Unloading Status</a></li>
     </ul>
   </div>
 </nav>
   
 <div class="container">
-  <h3>Basic Navbar Example</h3>
-  <p>A navigation bar is a navigation header that is placed at the top of the page.</p>
+  <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSrl2sPlk-BrBgp9S7SaVDW9FIPu8xHc_2Vw3Jug6miECbllfPx87x1okLqe0J5SVoU0c4jal7UFxD7/embed?start=true&loop=true&delayms=3000" frameborder="0" scrolling="yes"                           
+                                    style="overflow: hidden; height: 470px; 
+                                                width: 600px; float: right; " height="470px" width="600px"
+                                   align="right">
+                                  </iframe> 
+  
 </div>
 
 </body>
