--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@ padding-top: 70px;
   
 <div class="container">
   <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSrl2sPlk-BrBgp9S7SaVDW9FIPu8xHc_2Vw3Jug6miECbllfPx87x1okLqe0J5SVoU0c4jal7UFxD7/embed?start=true&loop=true&delayms=3000" frameborder="0" scrolling="yes"                           
-                                    style="overflow: hidden; height: 470px; 
-                                                width: 600px; float: right; " height="470px" width="600px"
+                                    style="overflow: hidden; height: 75%; 
+                                                width: 49%; float: right; " height="75%" width="49%"
                                    align="right">
                                   </iframe> 
   
