--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>Online Tracker</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -13,10 +13,10 @@ padding-top: 70px;
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">Stellar - VIP Uran WH</a>
+      <h1 class="navbar-brand" href="#">Stellar - VIP Uran WH</h1>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Unloading Status</a></li>
+      <li><a href="#">Unloading Status</a></li>
     </ul>
   </div>
 </nav>
