--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 padding-top: 70px;
-<nav class="navbar navbar-default navbar-fixed-top">
+<nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
       <h1 class="navbar-brand" href="#">Stellar - VIP Uran WH</h1>
@@ -23,7 +23,7 @@ padding-top: 70px;
   
 <div class="container">
   <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSrl2sPlk-BrBgp9S7SaVDW9FIPu8xHc_2Vw3Jug6miECbllfPx87x1okLqe0J5SVoU0c4jal7UFxD7/embed?start=true&loop=true&delayms=3000" frameborder="0" scrolling="yes"                           
-                                    style="overflow: hidden; height: 75%; 
+                                    style="overflow: hidden; height: 200%; 
                                                 width: 49%; float: right;
                                    align="right">
                                   </iframe> 
