--- a/index.html
+++ b/index.html
@@ -19,16 +19,24 @@ padding-top: 700px;
       <li><a href="#">Unloading Status</a></li>
     </ul>
   </div>
-</nav>
-  
-<div class="container">
-  <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSrl2sPlk-BrBgp9S7SaVDW9FIPu8xHc_2Vw3Jug6miECbllfPx87x1okLqe0J5SVoU0c4jal7UFxD7/embed?start=true&loop=true&delayms=3000" frameborder="0" scrolling="yes"                           
-                                    style="overflow: hidden;
-                                   width: 49%; float: right;
+<div id="cs">
+     <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSrl2sPlk-BrBgp9S7SaVDW9FIPu8xHc_2Vw3Jug6miECbllfPx87x1okLqe0J5SVoU0c4jal7UFxD7/embed?start=true&loop=true&delayms=3000" frameborder="0" scrolling="yes"                           
+                                    style="overflow: hidden; height: 470px; 
+                                                width: 600px; float: right; " height="470px" width="600px"
                                    align="right">
-                                  </iframe> 
-  
+                                  </iframe>  
+
+     <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRs4J4TBrZ9NlNYNocRfjQfl-rBewkNh8aghWHhOn4tTnWmVDuwNsF6NsbX9tm75iqhHRS2n5yQsowI/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false" frameborder="0" scrolling="yes"  
+                                        style="overflow: hidden; height: 75%;
+                                        position: absolute;
+                                        width: 49%; " height="75%" width="49%"                                 
+                                         align="left">
+                                        </iframe>
+  </div>
+  <div id="pb">
+   <iframe name="pb" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRs4J4TBrZ9NlNYNocRfjQfl-rBewkNh8aghWHhOn4tTnWmVDuwNsF6NsbX9tm75iqhHRS2n5yQsowI/pubchart?oid=1982250927&format=interactive" style="height:25%; width: 100%; border: none;"></iframe>
 </div>
+
 
 </body>
 </html>
