--- a/index.html
+++ b/index.html
@@ -10,15 +10,24 @@
 </head>
 <body>
 padding-top: 700px;
-<nav class="navbar navbar-inverse navbar-fixed-top">
+<nav class="navbar navbar-inverted navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="#">Stellar - VIP Uran WH</a>
     </div>
-    <ul class="nav navbar-nav">
+    <ul class="nav navbar-nav navbar-right">
       <li><a href="#">Unloading Status</a></li>
     </ul>
   </div>
+  </nav>
+  .navbar-brand
+{
+    position: absolute;
+    width: 100%;
+    left: 0;
+    text-align: center;
+    margin:0 auto;
+}
 <div id="cs">
      <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSrl2sPlk-BrBgp9S7SaVDW9FIPu8xHc_2Vw3Jug6miECbllfPx87x1okLqe0J5SVoU0c4jal7UFxD7/embed?start=true&loop=true&delayms=3000" frameborder="0" scrolling="yes"                           
                                     style="overflow: hidden; height: 470px; 
