--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 padding-top: 700px;
-<nav class="navbar navbar-inverted navbar-fixed-top">
+<nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="#">Stellar - VIP Uran WH</a>
@@ -20,6 +20,10 @@ padding-top: 700px;
     </ul>
   </div>
   </nav>
+  .navbar-default {
+    background-color: #424242;
+    border-color: #FAFAFA;
+}
   .navbar-brand
 {
     position: absolute;
@@ -27,6 +31,7 @@ padding-top: 700px;
     left: 0;
     text-align: center;
     margin:0 auto;
+  colour: #FAFAFA
 }
 <div id="cs">
      <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSrl2sPlk-BrBgp9S7SaVDW9FIPu8xHc_2Vw3Jug6miECbllfPx87x1okLqe0J5SVoU0c4jal7UFxD7/embed?start=true&loop=true&delayms=3000" frameborder="0" scrolling="yes"                           
