--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 padding-top: 700px;
-<nav class="navbar navbar-default navbar-fixed-top">
+<nav class="navbar navbar-custom navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="#">Stellar - VIP Uran WH</a>
@@ -20,10 +20,11 @@ padding-top: 700px;
     </ul>
   </div>
   </nav>
-  .navbar-default {
+  .navbar-custom {
     background-color: #424242;
     border-color: #FAFAFA;
-}
+  border-radius:0;
+  }
   .navbar-brand
 {
     position: absolute;
