--- a/index.html
+++ b/index.html
@@ -10,46 +10,33 @@
 </head>
 <body>
 padding-top: 700px;
-<nav class="navbar navbar-custom navbar-fixed-top">
+<nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">Stellar - VIP Uran WH</a>
+      <a class="navbar-brand navbar-center" href="#">Stellar - VIP Uran WH</a>
     </div>
     <ul class="nav navbar-nav navbar-right">
       <li><a href="#">Unloading Status</a></li>
     </ul>
   </div>
   </nav>
-  .navbar-custom {
-    background-color: #424242;
-    border-color: #FAFAFA;
-  border-radius:0;
-  }
-  .navbar-brand
-{
-    position: absolute;
-    width: 100%;
-    left: 0;
-    text-align: center;
-    margin:0 auto;
-  colour: #FAFAFA
-}
+ 
 <div id="cs">
      <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSrl2sPlk-BrBgp9S7SaVDW9FIPu8xHc_2Vw3Jug6miECbllfPx87x1okLqe0J5SVoU0c4jal7UFxD7/embed?start=true&loop=true&delayms=3000" frameborder="0" scrolling="yes"                           
                                     style="overflow: hidden; height: 470px; 
-                                                width: 600px; float: right; " height="470px" width="600px"
+                                                width: 700px; float: right; " height="470px" width="700px"
                                    align="right">
                                   </iframe>  
 
      <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRs4J4TBrZ9NlNYNocRfjQfl-rBewkNh8aghWHhOn4tTnWmVDuwNsF6NsbX9tm75iqhHRS2n5yQsowI/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false" frameborder="0" scrolling="yes"  
                                         style="overflow: hidden; height: 75%;
-                                        position: absolute;
+                                        position: absolute;scrolling="no";
                                         width: 49%; " height="75%" width="49%"                                 
                                          align="left">
                                         </iframe>
   </div>
   <div id="pb">
-   <iframe name="pb" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRs4J4TBrZ9NlNYNocRfjQfl-rBewkNh8aghWHhOn4tTnWmVDuwNsF6NsbX9tm75iqhHRS2n5yQsowI/pubchart?oid=1982250927&format=interactive" style="height:25%; width: 100%; border: none;"></iframe>
+   <iframe name="pb" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRs4J4TBrZ9NlNYNocRfjQfl-rBewkNh8aghWHhOn4tTnWmVDuwNsF6NsbX9tm75iqhHRS2n5yQsowI/pubchart?oid=1982250927&format=interactive" style="height:25%; width: 100%; border: none;scrolling="no""></iframe>
 </div>
 
 
