--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@ padding-top: 700px;
                                   </iframe>  
 
      <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRs4J4TBrZ9NlNYNocRfjQfl-rBewkNh8aghWHhOn4tTnWmVDuwNsF6NsbX9tm75iqhHRS2n5yQsowI/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false" frameborder="0" scrolling="yes"  
-                                        style="overflow: hidden; height: 75%;
-                                        position: absolute;scrolling="no";
+                                        style="overflow: hidden; height: 75%;scrolling="no";seamless="seamless";
+                                        position: absolute;
                                         width: 49%; " height="75%" width="49%"                                 
                                          align="left">
                                         </iframe>
