--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 </head>
 <body>
 padding-top: 700px;
-<nav class="navbar navbar-inverse navbar-fixed-top">
+<nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand navbar-center" href="#">Stellar - VIP Uran WH</a>
+      <a class="navbar-brand navbar-center navbar-active" href="#">Unloading Status</a>
     </div>
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="#">Unloading Status</a></li>
+      <li><a href="#">Stellar - VIP Uran WH</a></li>
     </ul>
   </div>
   </nav>
